DT-1645 fixes basket quantity button wrapping at mobile

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1548,6 +1548,9 @@ select::-ms-expand {
       .basket-summary-quantity {
         margin-top: 4px;
       }
+      .basket-summary-quantitybtn {
+        min-width: 90px;
+      }
       .basket-summary-quantity, .basket-summary-quantitybtn {
         display: inline-block;
         label {
